After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796108 - PPP does not exit when ModemManager exits
PPP does not exit when ModemManager exits
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: PPP
1.10.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-05-14 15:08 UTC by Frederic Danis
Modified: 2018-05-18 08:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
NM, MM, pppd and systemd logs (61.25 KB, text/x-log)
2018-05-14 15:08 UTC, Frederic Danis
Details

Description Frederic Danis 2018-05-14 15:08:07 UTC
Created attachment 372021 [details]
NM, MM, pppd and systemd logs

I am using NetworkManager 1.8.4 on a linux device without CDC support.

Steps to reproduce:
1. Connect 3G modem
2. Connect to network with NM
3. wait for PPP connection completes
4. kill ModemManager

Actual result:
ModemManager exits correctly, but pppd is still running

Expected result:
pppd exits

Versions:
NetworkManager 1.8.4
ModemManager 1.6.10
pppd 2.4.7
Linux 4.14.29

Traces in attached file
Comment 1 Frederic Danis 2018-05-17 11:52:07 UTC
I was able to reproduce this with:
NetworkManager 1.10.8
ModemManager 1.6.12